barking fixed, e-mail no-wrap

--- a/src/components/Contact.css
+++ b/src/components/Contact.css
@@ -11,7 +11,6 @@
 .contact-page-content {
     display: flex;
     width: 90vw;
-    max-width: 1200px;
     flex-direction: row;
     align-items: flex-start;
     justify-content: space-evenly;
